--- a/styles/architects.css
+++ b/styles/architects.css
@@ -23,6 +23,9 @@
 .text-light-gray{
     color: #727272;
 }
+.text-primary{
+    color: #FF900E;
+}
 .btn-primary{
     background-color: #FF900E;
     color: white;
@@ -31,6 +34,12 @@
     padding: 20px 25px;
     border-radius: 8px;
     border: none;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+
 }
 /* header styles */
 .bg-primary-color{
@@ -56,11 +65,13 @@
     max-width: 1440px;
     margin: 0 auto;
 }
-
+main > section{
+    margin-top: 130px;
+}
 /* banner related styles */
 .banner-content{
     max-width: 850px;
-    margin: 0 auto;
+    margin: 0px auto;
     text-align: center;
     margin-bottom: 50px;
 }
@@ -72,9 +83,45 @@
     width: 100%;
 }
 
+/* teams style */
+.teams{
+    align-items: center;
+}
+.team-img{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+.team-content{
+    margin-left: 48px;
+    max-width: 530px;
+}
+.section-title{
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+#part1{
+    font-weight: 500;
+}
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .nav-link, .navbar{
+    .nav-link, 
+    .navbar,
+    .teams
+    {
         flex-direction: column;
+    }
+    .team-img{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+/* responsive for medium devices */
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .team-content{
+        text-align: center;
+        margin: 50px auto;
     }
 }
