--- a/styles/architects.css
+++ b/styles/architects.css
@@ -82,7 +82,43 @@ main > section{
 .banner-image{
     width: 100%;
 }
-
+/* some fact related styles */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    /* gap: 125px; */
+}
+.fact{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* padding: 36px 50px; */
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-description{
+    max-width: 540px;
+    margin-top: 24px;
+    margin-bottom: 100px;
+}
+.fact-icon{
+    margin-top: 46px;
+    margin-bottom: 10px;
+    /* margin-bottom: 5px; */
+}
 /* teams style */
 .teams{
     align-items: center;
